2016-11-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement unit tests for ANSI printf() functions.

	* tests/Makefile.in (testsuite): Add dependency for...
	* tests/ansiprintf.at: ...this new file, and...
	* tests/testsuite.at.in: ...m4_include it.

2016-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix another printf() hex-float formatting bug.

	* mingwex/stdio/pformat.c (__pformat_emit_xfloat)
	[stream->flags & PFORMAT_ZEROFILL]: Ignore this; it should be...
	[(stream->flags & PFORMAT_JUSTIFY) == PFORMAT_ZEROFILL]: ...thus.

2016-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Merge post 2016-10-18 updates from legacy branch.

	* include/io.h include/wchar.h: Updated.
	* mingwex/stdio/pformat.c: Likewise.

2016-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around MSDN inconsistencies in _finddata_t naming.

	* include/io.h (_finddata64_t, _wfinddata64_): Define them
	respectively as aberrant alternative data type names for each of...
	(__finddata64_t, __wfinddata64_t): ...these original names.
	(_wfinddata32_t): Similarly, define this with...
	(__wfinddata32_t): ...this alternative name.

	* include/wchar.h (_wfinddata32_t): Correct references in comments.

2016-10-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix a potentially infinite printf() format conversion loop.

	* mingwex/stdio/pformat.c (__pformat_emit_xfloat)
	[value.__pformat_fpreg_mantissa == 0]: Do not attempt to normalize
	it; there are no 1-bits to promote, so repeated shifting until one
	appears in most significant position will never terminate.

2016-10-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Merge mingwrt-3.22.4 updates into 5.0-active branch.

	* configure.ac: Preserve original 5.0-active state.
	* include/wchar.h: Update per 2016-10-17 commits.

2016-10-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.4 patch release.
